Add option to specify SSDP Multicast address.

--- a/minidlna.conf
+++ b/minidlna.conf
@@ -101,3 +101,6 @@ model_number=1
 
 # don't extract video names from file's metadata, only consider filename
 #only_file_names=yes
+
+# SSDP Multicast address.
+#ssdp_address=192.168.1.255
