Added option to ignore file's metadata name and to not send video file's artwork

--- a/minidlna.conf
+++ b/minidlna.conf
@@ -95,3 +95,9 @@ model_number=1
 # enable subtitle support by default on unknown clients.
 # note: the default is yes
 #enable_subtitles=yes
+
+# disable sending video artwork
+#video_thumbnails=no
+
+# don't extract video names from file's metadata, only consider filename
+#only_file_names=yes
