Be more compatible with enigma2

--- a/minidlna.conf
+++ b/minidlna.conf
@@ -15,7 +15,7 @@ port=8200
 #   + "V" for video  (eg. media_dir=V,/home/jmaggard/Videos)
 #   + "P" for images (eg. media_dir=P,/home/jmaggard/Pictures)
 #   + "PV" for pictures and video (eg. media_dir=PV,/home/jmaggard/digital_camera)
-media_dir=/opt
+media_dir=/media
 
 # set this to merge all media_dir base contents into the root container
 # note: the default is no
@@ -25,14 +25,14 @@ media_dir=/opt
 #friendly_name=My DLNA Server
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its database and album art cache
-#db_dir=/var/cache/minidlna
+db_dir=/var/lib/minidlna
 
 # set this if you would like to specify the directory where you want MiniDLNA to store its log file
-#log_dir=/var/log
+log_dir=/tmp
 
 # set this to change the verbosity of the information that is logged
 # each section can use a different level: off, fatal, error, warn, info, or debug
-#log_level=general,artwork,database,inotify,scanner,metadata,http,ssdp,tivo=warn
+log_level=general,artwork,database,inotify,scanner,metadata,http,ssdp,tivo=off
 
 # this should be a list of file names to check for when searching for album art
 # note: names should be delimited with a forward slash ("/")
@@ -77,7 +77,7 @@ model_number=1
 #   + "P" - "Pictures"
 #   + Or, you can specify the ObjectID of your desired root container (eg. 1$F for Music/Playlists)
 # if you specify "B" and client device is audio-only then "Music/Folders" will be used as root
-#root_container=.
+root_container=B
 
 # always force SortCriteria to this value, regardless of the SortCriteria passed by the client
 # note: you can prepend the sort criteria with "!" to alter the titles of the objects so that they
